--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Commissioner', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.disabledContent {
+  cursor: not-allowed;
+  background-color: rgb(229, 229, 229) !important;
+}
+
+.disabledContent > * {
+  pointer-events: none;
+}
+.btn-disable {
+  cursor: not-allowed;
+  pointer-events: none;
+
+  /*Button disabled - CSS color class*/
+  color: #c0c0c0;
+  background-color: #ffffff;
+}
+#hero {
+  background-image: url('./images/image-hero-mobile.jpg');
+  background-size: '100% 100%';
+  z-index: '-999';
+}
+@media screen and (min-width: 786px) {
+  #hero {
+    background-image: url('./images/image-hero-desktop.jpg');
+  }
 }
