--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,38 @@ body {
   color: #c0c0c0;
   background-color: #ffffff;
 }
+
+input:checked + label {
+  border-color: hsl(176, 50%, 47%);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
 #hero {
   background-image: url('./images/image-hero-mobile.jpg');
   background-size: '100% 100%';
   z-index: '-999';
 }
+html {
+  scroll-behavior: smooth;
+}
+input[type='radio'] + label span {
+  transition: background 0.2s, transform 0.2s;
+}
+
+input[type='radio'] + label span:hover,
+input[type='radio'] + label:hover span {
+  transform: scale(1.2);
+}
+
+input[type='radio']:checked + label span {
+  background-color: hsl(176, 50%, 47%); /*bg-blue */
+  box-shadow: 0px 0px 0px 2px white inset;
+}
+/*text-blue*/
+/* input[type='radio']:checked + label {
+  color: hsl(176, 50%, 47%); 
+} */
+
 @media screen and (min-width: 786px) {
   #hero {
     background-image: url('./images/image-hero-desktop.jpg');
