--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ input:checked + label {
 #hero {
   background-image: url('./images/image-hero-mobile.jpg');
   background-size: '100% 100%';
+  background-repeat: no-repeat;
   z-index: '-999';
 }
 html {
